# izan-ui

./: .gitignore  CMakeLists.txt
cmake/: gui_deps.cmake
demo/: smoke_main.cpp
demo/macos/: apple_menu.cpp  apple_menu.hpp  control_center.cpp  control_center.hpp  desktop.cpp  desktop.hpp  desktop_icons.cpp  desktop_icons.hpp  dock.cpp  dock.hpp  finder.cpp  finder.hpp  finder_content.cpp  finder_sidebar.cpp  macos_desktop.cpp  macos_desktop.h  main.cpp  menu_bar.cpp  menu_bar.hpp  paint.cpp  paint.hpp  state.hpp  wallpaper.cpp  wallpaper.hpp
demo/os/: main.cpp
tests/: select_test.cpp  wm_test.cpp
tools/: cursor_sheet.cpp  svg_sheet.cpp
ui/assets/cursors/: README.md
ui/os/: app.hpp  dock.cpp  dock.hpp  menu_bar.cpp  menu_bar.hpp  mint_paint.cpp  mint_paint.hpp  panel.cpp  panel.hpp  shell.cpp  shell.hpp  theme.hpp  theme_mac.cpp  theme_mint.cpp  wm.cpp  wm.hpp
ui/render/: image_load.cpp  image_load.hpp  live_backdrop.cpp  live_backdrop.hpp  sdf_rect.cpp  sdf_rect.hpp  svg_icon.cpp  svg_icon.hpp  svg_raster.cpp  svg_raster.hpp
ui/shell/: app.cpp  app.hpp  chrome_state.hpp  chrome_widgets.cpp  cursor_paint.cpp  cursor_paint.hpp  fonts.cpp  fonts.hpp  ime.cpp  win_chrome.cpp  win_chrome.hpp  win_cursors.cpp
ui/widgets/: address_field.cpp  amount_field.cpp  asset_row.cpp  avatar.cpp  button.cpp  design.cpp  design.hpp  dialog.cpp  list_row.cpp  menu.cpp  pill.cpp  qr.cpp  scrollbar.cpp  scrollbar.hpp  search_field.cpp  select.cpp  select.hpp  text_field.cpp  text_field.hpp  toggle.cpp  tx_row.cpp  tx_row.hpp
